--- a/diilikone/templates/admin/index.html
+++ b/diilikone/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 
 {% block menu_links %}
-  {% if current_user.is_authenticated() %}
+  {% if current_user.is_authenticated %}
     <ul class="nav">
       <li><a href="/admin/logout">Log out</a></li>
     </ul>
