--- a/diilikone/templates/admin/status.html
+++ b/diilikone/templates/admin/status.html
@@ -8,18 +8,27 @@
     <p> {{ data.total_size }}</p>
   </div>
   <div class="row-fluid">
-    <div class="span6">
+    <div class="span5">
+      <div>
+        <h4> 10 Uusinta diiliä:</h4>
+        {% for deal in data.new_deals %}
+         <p>{{deal.created_at.strftime('%-d.%-m %H.%M')}}: 
+          {{deal.salesperson.name}} ({{deal.deal_group.name}}) - {{deal.size}} </p>
+        {% endfor %}
+      </div>
+    </div>
+    <div class="span4">
       <div>
         <h4> Yhdistykset:</h4>
         {% for group in data.groups %}
         <div class="row-fluid">
-          <div class="span4">{{group.name}} </div>
+          <div class="span5">{{group.name}} </div>
           <div class="span1" style="text-align:right">{{group.total_size}}</div>
         </div>
         {% endfor %}
       </div>
     </div>
-    <div class="span6">
+    <div class="span3">
       <div>
         <h4> Tuotteita jäljellä:</h4>
         {% for product in data.products %}
