Add magazines to be fetched to admin status page

--- a/diilikone/templates/admin/status.html
+++ b/diilikone/templates/admin/status.html
@@ -18,7 +18,7 @@
 
      <div class='span3'>
       <h4> Lehtiä noutamatta:</h4>
-      <p> TODO </p>
+      <p> {{data.magazines_to_be_fetched}} </p>
     </div>
     
   </div>
